fix: align the p's

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -122,38 +122,39 @@ header {
       transform: none;
 
       a {
-        background: yellow;
-        //
-        // p.noSkew {
-        //   transform: none;
-        // }
+        background: #21424a;
       }
     }
 
     &.register {
 
       a {
-        background: orange;
+        background: #2fac6c;
 
         p {
           transform: skewX(20deg);
+          margin-left: 0;
         }
       }
     }
-    
+
     a {
       display: block;
       padding: 2.4rem 0;
-
+  
       &:hover {
         background: blue;
       }
-
+  
       p {
-        width: 50%;
+        width: 30%;
         // float: left;
         // task ^^^
         text-align: center;
+        margin-left: 20%;
+        font-family: $primaryFontFamilyBold;
+        color: #fff;
+        text-transform: uppercase;
       }
     }
   }
